examples/invalid/float_number.mini
# Ошибка: вещественное число (не поддерживается)
2.5
